--- a/ProyectoGestiónEscolar/CapaPresentacion/Menu_Empleados.resx
+++ b/ProyectoGestiónEscolar/CapaPresentacion/Menu_Empleados.resx
@@ -262,4 +262,55 @@
         Go0Y8V/faEnF+GNc1AAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="btn_listado_C_asignados.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAApuSURBVHhe7VprUBTZGcWkarOVzSabbCURd1NbSXaTf8mv
+        TdzEstbNupX9kVJXlxIfpYIK+EAFZAYQjLAIgrKIvEEZQNSAD+SlMIM8HJXX9AwPAXkMPSNiENR5gQrK
+        l3vbnrGn5w7MDAOaqjlVp+b27e77fef07du3e66bCy644IILLrjwf4t7Je4/fiT54E+4rKn6tYdGsrBL
+        K1mo0krcIwHcFjAHvQlo6Bn9KaXSL6fUuh0UbUhA5ZMylaEQE5dR3TFKpfPDx+Bj2dNmhFa86DOteGEl
+        +v2DRuw+gYSDkWh7PXvY60Hr3bEPZbRBgETdpGj9JKUygE1Ex8pU+hvo3GC5euwDtrlpoZO4e3PFswbk
+        sLvnFy0DY4uRiBIZrX9BFGgPaf1z1E4xMuIvbPNEaKt+tZhvAOoZAezu+YGCfvJbdLVLiUKcQGyETDn+
+        ERvOAlqx+3caifsL9uqXQ81Hb7O75hYAsAB12QB0tcZJide1qkHS2G0z8fGkdhjS+jFEfxyTDW+GEen7
+        7+oqFv6S3Zx7dKg1v0DiK/iJoqsFKcknYf3yL8F39Wrw37DOZuLj8XnJSVlMO/y2X1Jf2qbS/JxN4/VA
+        ptZ8jMQrSQmmnMgGwVYvuNNJgYrutpt3uhQQ4rMVkr5Ps2jbRNrQ16zS/J5NxwyCHPnnghzqjkBEHWGr
+        nAs8wqOrQBMTQ/T8YplV8dUVlyAj/rCJ4rILxOOwCR5Ll0BT70NiDEx0AQZITwqhiIoTiuSATBhkq5yH
+        xkHt+yh4Jz8ZI+vkNGxbuYIoyl76rvkG0lJFxDhGosdlB/92CMppXIhMSA4WUV+zVfZDmEttQi4W7D9F
+        fcJWuRUC/BAFrCUlYqSk6Q7s8FjDCIgLE8KJ+KM2MyczCzoH1JB3Mps532/NKjgsDIRaaoAYy0RafxUN
+        jD9g03QOhDnUMO5GiEfZKjdmtCclwCHXgKTYWLih1ED9nQdQ3T7IlDGlfQ+huu0u82usw/vruoeZclJS
+        OnP+jm9XQWLUAaZNUiwu0YC5m03TOUBdKAiJvxUikjFz7Val9o/IgKek4FzyDSi8Ug+HBBsgIdYb/i30
+        h5rbQ7Ddyx/89kaDj9duRvjh4M2QHbYYjvovgXOlYii51mDqAbGhwVAj6yfGMiN6DDepnvyOSX4ugMSX
+        EQPzyDcgJSMDpM2h0NoXCcdi/KD0RgfsOpCBexbsisiG4lo5pIf/k5m9DZUsgtTEGGgaGGXO3+3pAYkJ
+        0zwJLKi/yKbrXLSodEvIAS3JN+BkQSHk5flBeeVeiAzdDpWUEnx2RoD/kYvo9yBcbe6FuMAVIM/5EMSJ
+        H0P2qVPwn8tVzPl70LzgqrSDGIfL3uEnMKqffLlNa//Gpu08oO51mR/UGvkGSPsewZmSGsi/KIbyW53M
+        PX5B0sxsXxA3MdsVDd3MNj4OHx8fm2CXAW13x6D7/ji77eRe0DQ4/hs0wNj8YsM3oPzmbTi2yw9S/P0g
+        +XAc1PeOQvyOQEjd6ANxvvugvmcEwo6lwOrQCPAMDoXL0na7DeAS52rrW6RNQDOuIFIga+QbkH48HXr3
+        fQujIesgdet6KEOGXP5iBTxaugYqlq2A4joFfLVfAG4FBfBWVhYcTEyblQGYLSr9Xjb92UOmMkhJQayR
+        b0BGSjZ07F7NGJDotR7dBl1Q+OVKxoBLyIjS623w9b4gxoC309Ig6kTWrA3AcxU2/dmhY3j4J+iemiAF
+        sUa+AfixFxcSBjEBgSDKOffyOR+VADE7AyApMh6k/Y/hREEx+AnDYc+BSKjuGJy9ASr9M8X9qXdYGY5D
+        ptYtJQWYjnwDsODpWNnSZ1E3WwMw5bTu76wMxyFTjfmQGp+O9hpwEl19fp0zDEBj11ZWhuNAXSme2Pg0
+        nMkAPN3FjzvjNteA3KKrzK9TDFDpY1kZjgMZkEVu3Dpt6QFFVbfgbHkdUxYrVMxvzrky5gmBy84wAOWe
+        ycpwHKgbnSU1Ph1tvQXqex5AVFgEHNy3B6LDDzHzA+M+J90CZ1kZjgM1cs7YIJ5udg4ZZ1vWyTWgtavL
+        TPR5cQNk5V2EguJqZhYoSkmEF88fwen0JKZXnCmpZfaHB4W8GQYYb4H72gn0ug0whfhqykkm14DuAdrM
+        AC4LK6RwPi+TMaCiKB9OX5KY9jmnB+gzWBmOwzgIasafMwZg0KNPyQFZcg2orb9uJprLOTfAGYOgnDZs
+        w411oa6ve/IcHhomQaEmBXtFrgHZyclmornkG5CVewFK0HsA3ueUQXDA4MXKcByznQhVVVVZCDeSb8Cu
+        tR5wPCocotCAuHv9Osg4Gj0rA5wyERqQX3qvU9n1tJUeIQYhkWvAdE8BrgGjw/2g06iZ8o41q+DBUA+c
+        SfseNi7/B3wXEg5X0AsTKZZV0vrxnp6pH7EyHMME5fHphGzt0KTME55Rm0HZU0MOxqMjBnD5eETJ/Mqk
+        VZASHQHq/lYI8fOBW90PiPGsUMLKcByTsrW3sHgjnyIT5CoNKZgZrRmAv/0ZJz3TGWDk5MQIQ1wuPJUO
+        pdXNxHgkOuV1eELmeZ9rAGb7wD1iQC65BkQF72ee6weDQyAqwB+ig/dB0HYfSM06A0dijiNhqYzApror
+        JuGkcqEoA0rQvIEUz5Lo7XVIN/v/B5HgTK54XWsIIZgluQa0tzZBQ4MUQrZvAb3mLiOm53YjCLw3QWyo
+        AM6L0pm6K+fzTaKvFOW9KrP1dhrgnE9iU4oN76DbIAWxa5zaJmlTqqcUynsw2OiLRlgtIfBLcg0wsl5S
+        DoItG0HzkGYETTwbgeLTWdDWXGMmlCnPwgAZrZ+ilIY/sxKcCzQpKpPTj6C3PZcY3Mhr6P3ed/U3ZgZg
+        3qi5Cvs3b4CHD/pNAvlCmTLHgP8OdjO/tveAOfosjvHy46hBTw78irIBHaxd9jko+zosTGi6cQ2CkQlG
+        YUZyDaBuis32YdpogKaZNriz6c4N8OhKCGzB2ENHIEYQCMr+TgsT2hWNEOy1Efq7m00CuQYoGq+Zykba
+        YkALrd/Jpjm3QMHy+cH5bO5/DNFhkbDhq+Ug2OYNIb7bzLjfezP4rPwXDKluMwIN2kGTWFWfwlQ2ciYD
+        0L2fy6Y398DL2NB4oCAlwide7lKEXnELi69ZMP9sGQRs2QSizEyrrKysgtrrUhDliKwagHKh6OZ898mW
+        tcfQo9uHTXNuIVONLUKBB0gJ2cPwoFAQ5rbOyHiRhGgAykGJ7/tnsrVe+FE90eI5BfJN77Fpzi3wQgl7
+        /zPgcyYDvPwTwDfkFNkA2lCP1yjhXJ5Snp9Mtni2IgOK5nWFqLRr5F1kQpFZYnZwJgM2bomALTvjLQ2g
+        DWed8t3fGQCABej5uwe/gXHF2UK7bwFaPzZvo729cGShZHhAMByIzpiRO30C4Pzl2prpFkq+MXgdS2Xn
+        H6jbC3KoQGGuIgCX2VozmBZL04brqGc8IQokEh2LBjh0rs2LpecdwlzZZ+wCKhDmKf7KVlsF/jqDryIS
+        5o0GzaNIpNlyeVyHv+FR6rFPOzrgLfa0NxeCjJafoR7QgBdRHcxvsHl9vwsuuOCCCy648IbAze1//uUO
+        Tx+HRpIAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
