--- a/ProyectoGestiónEscolar/CapaPresentacion/Ingresar_Usuario.resx
+++ b/ProyectoGestiónEscolar/CapaPresentacion/Ingresar_Usuario.resx
@@ -121,47 +121,6 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btn_mostrar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAACBxJREFUaEPtV1lMW9kZpg+t1OWlaqWq7UMf2oeqT02jtqo0UkcaNTEBEkiHZJKp
-        EpJhkjAZGGWbgYwJS8kMW8BKwiTGC0sUoFAwMGzeMGAIi80Ss2MStoSUHcJiG2P/Pf/lONi5F4iTQJOK
-        T/qkI99/+f57/3P+Y48dvAkITRTtDk0QZYQminPfCiaI00OviXdR+R4e/CSpTpBRaMss0sDbQNTKT05r
-        ovI9PMKTM7rK61phaOLpW0HUipqp/J0Ctp07Bfyv+VIF9I5MQpW+h2Hvo0lOG2dupb3bBZTVtkJwZAqc
-        CktmGELW5XVtnLbIrbZ3q4DmnmEI4l9/FtzBT/g3oLVvZNvtkW4VkFVawwruYHapdtvtkW4VkCZTcwZH
-        ZhRWbrs90q0CVI2dnMGRlbqubbdHulUAMkGUzwqeKCngtEVutb3bBQyMzUGBqhHihHkQl5oHMnUTDI7P
-        cdoit9re7QLeNO4UsB77HrSDQScDnVoA9SV80OYHE4Ywa/zNoJcRmw5OX3f4WgswDvaBvvoWVGUdB4WI
-        B3V5p6FdkwAPW7NhpKuEIa7bNfFQm3uKsanKDoDm6lToHzRyxtyMr6WAXuN9uFccBkqxJzQVX4RH3eVg
-        XpwCxOyCBboGp6G+8z8McT23aGGemRcnYaS7lPFB37riy9DXb+DMsR45CkjvypPfA33P0KZsau+A6qJI
-        8iY9QV8aBrPjPYywFZsdKpqG4MI39+DAl2XwfoQcjsSoGeL6AL+MeSZvGmZsEbNj3aArDWUKqSmOAl17
-        J2fO54larwjSOql88qf+Wlp4WILYRv4sw0a8JoiCcrEv1P47CGaedDAiED3DM3AqsQoORSkgWGiA6IIn
-        kFA+68Ko/FHm2aFIBZy+Vg19IzPUG2B61ADa3NNQIfaDREE0Z25notawRMllKn9zfCv0+YFS4pOlkvhY
-        R7rL7AQ0NUDN/cdwMLwcglJaILZkiiX8eX5NbIJutsDBKxWgNYzSKAAYE2NjDsyFOWn6V4NavO9XKqlP
-        W03OcfP81ABNt4q2/gnw45fDhbReTrEb8by0h/E1PJik0VYxP/UQarKPmVXS/a2Ym8p4OZDe3KWSek+3
-        lPMt1uUlmmIVM/Nm+CBaASGpHZwCX4QhpKWORCufbXAHMBfmVEq8pxSp+35P5bgHVSrvj+RzPu2oSrTa
-        bVYaeg03Ze1wPF4L8WXc4iLu9sBnyQr4TKCAiKzVL5RRNw8F+gVIkq/aoO+xuBq4XbS2nxzAnOTotSql
-        3nNy0Z7dVNaLQSXh/UUl8TL1NohIs6/1uwNPyRvzJacK/18jLqKRXxU9gb+fiYE/vevjwrjbedQboH/c
-        +syenzPMxJpfWqZPnWGHnvrbZF94L8mF+/5M5W0MrJZ8usV+XfoKjcKCqnkEPrxa6SIcGUc26L4Pz7PE
-        I+/myqg3gMVqd/E7GlMJlS2P6FM2jI3SFVLEPLY0lcmNCvHe3xDxc11agY36cuJ6gQHO3Gh2EYEMipVx
-        ikeeOHMBFhYXGX/dgNnF7/QNPaSQllwfduisSbYpJV6zaqHnr6lcV5R84/VjctoMtqlilp2PSS7wpY3k
-        TGdvXt/AK5ziHfwrzx9OXkxk+QUL2yGcxNwIqKlN+c9l1Ihaqew1yMWeJ5Vinn1+epC6rI/zKXVwTtLN
-        EuK5Tvs4E1vseb9zki44R2JuhvnpATK1eXalaO8JKtsVZONmV2f9w2xZmqYu3IjO0MOntw0sIe9/8hWn
-        aGf6n41l+Z29ZYCYO800OjdQE2pTib3SqVw25Jl7fkj2QEtDYbDJtuJ6Njsj9dtOCBQ0soScT6nmFO3M
-        i7e0LL9AQQOISjppdDZsVgvUF3xqIhu5edMJrRH6/JRMwf7WinCzjeP8RzT3jjNXgbjSaZaYQ8HxLNEO
-        Hg5h9z/GwFitxgka3RW2lWUy1L7EydynynjvJ1TmxlDf8v4lGSBDutIvTCtWEw21BovVBofJxe1SRh9L
-        UHzZDARG3oV3eEeeCX/H8wh8HJXFPHve/mJ6HzONrSvsg2+FTGRdySUi3mdAIfnbL6i8F0OFcO/PVWn7
-        e+tlwWRPrN0cHcivfgBHr6o5vwIyvmwaInL6IDLbyKy5bND3KLluF9Y+pFHXgD1fLztrVkv3d6tE7/2M
-        ynIPmpR3f6SU+lRV3TlsmRvvpaFXYVleYa7QHwuamCsBl8CNiD6ByY1wJqma+aLOwFxVdw5ZMDdqoHJe
-        DvQqnUnexPKTfg1NsYrHEwvwAWklHGpc7bEe40tnmOGFbTg6uTrcHBg1VgLpdys5EdPuJfl/n8p4dShS
-        eX5kEi7oS78wm+bHaDqAB4/n4NjXaghIqINI8qeFS7AzI/IeQ0B8LQTEVsLD0TkaBQBj6ks+N+OVgcwk
-        X5r29UIl9fwdeTt6dbqfZahdRk6I1aN2+qkZYrNamL+NgckN8HmGEWJkY0zvI3F9KdMIHyXVMzZx2a2M
-        DwKPyEFDvr0y3Q+nbJNcuOe3NN3WAMDjOzgJlWKvCc0d/6WRrhI7HnUI46NZEBZ3wMk4Dey/XOrCj+I1
-        zPzoJzYI9BnuLLZrMv2XyOwZk4t5xzE2TbP1wM2lSN0bRd7aDH6RLu11+8RwIziOXdyYE7Mmho5Nisfi
-        +FADdGqTbep0X+YPi1LEi3jljfoqyM31/55CzPNXSw8Uka9iJldeuzbnhKlVHmG5r7oKSFxrcwJM+Izs
-        I5MqzbeQCD+oF+7+Lg3zZgCLIfPjD0yLkTdLLl4pChHvJrNm2s5zF9pQ8x38H8DD47+Qif66O7xdLwAA
-        AABJRU5ErkJggg==
-</value>
-  </data>
   <data name="btn_guardar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
@@ -177,6 +136,60 @@
         KUDmG8o5FkjlhrZFDZ7bdoG+R5/gQr7IBJxtDBMBLxMK7EiBnPAF4qMlJuSERW2LGiYC994sQv/zChPu
         v61qW9QwEfAyoUAo4DKOBboHC8rDWx18/ol3SKsrhhfgbuxg7IQdLQX2J0g3vmAkypMJLinO+YnSwdQL
         u2q1w/icSOQf0IR8d8w6EUwAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnBuscar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAACydJREFUaEPNWVlsU+kVplX3l25qqy7qQx+6P4zahz5VVVu1L60qVX1p1UqtRu1o
+        ZrwkYQaYAQYCiAEmsZ3Y2WzfzXE2sidkXwhkTyAJSVgmkEAgC2QDQsju+PSc//7X98YYHAK0OdKR7Wvf
+        //++/+zXu55X3G+4P22z+n5tMysf2s1yhcOqDDti5Ac2sww2i7LuiFFm8PqAzSTLNov8n+SYzO/yW/+/
+        Yn/T920EZHNY5FkCi69B/3Fpo8otQnOermczRShySJC2T1pnpMxyEAk12U2+P8Mu+ARf7n8nJ99wfxFP
+        O8FulVcdVnmjIkMK3uwQYX3SCzDzbL0/JEBXiQjiQSnASFuVQbIeX/rVi92i/B5PetqOp12viPBoODLQ
+        aBqc9sLH5wQQVCJBdC8RXfELfJtXIzaz9C6aPijFS4F7A0JEYEu3vUDWuFIvQHepCL2VIlxvFuFevwo6
+        /Pfrd73Qgm5mNytBsga5Jd/u5YrdpBwik5enirAW5iqr4164UCZAzkkZ0DLk4xE1bZ8CtYIE4z1PkifS
+        zjh5w2GVRl96kGMmsRKAGq8IwSl90/W7qj+n7FHAZlXAfbIScosGoaxtAmqHFqH+5ip7rbgwA0W1IyCn
+        N0PSO1mMTJFDZlYxkrh7SQDXbjmAcXXdHid8hW//YmIzKb/FTLNRniYFjeAXbnoh6wSeLJ645GqCiosz
+        DHA0rR16DHnFlyF5bzZgeoX+Gt0agTtuuN3qgaRYeQNjrT4+Pv6THMb2xBErf4kCVjokBYxuM31ZAPf7
+        PnC9lwvFZ0d1gCOrUNo2Dtl5veBNqgf3R9XgTqiGM533NpEgrb4yD97kemaNRp8Iy1czYGkwnenFfI/q
+        diZ5N4eyPbGZpGTKNkZTP76F4Pf7IOWDQqjqfxACVFhzA1KPlKobozulHS1lBDyJNVDeMRn6XUXPLNQg
+        ePZ5ZAV8cju757yCCYATIC1IECnFLjli/d/kcJ5PKBsg+DVKlRp4yhhZJxRw7suB6kEVRO31JZBSmhiI
+        1PgSKKgagtqPH4cAh2vG8Qp0nxwoabqtXkOriXQ/uuJgqSdE4F5bBhKQMDvJSRzS8wkueJIq6/wN/fQp
+        YNE3obRlLATI/VEVO/GcvD4GRrv+NKWATjlUhOv4oKx1gl2jQ0g7Vgqp7yrwsEd3pSqXAFgsV8iVOayt
+        CQbPpzATTJenSCHwy5jfXbiBhJnECIiyTjE/zcZbq9B2ZwXOj24GHa41GMjZ2T0hK5KWtU8yKzSJQojA
+        nSa36pLYP3FoWxO7RfoV3Xi9Wc8Qnfz0K3vnNoHRtHNsGebmF2BhQdXbc0vQMRGA1vF1aLq9FvGecBUc
+        dZAcp8CjPj0WpA9oX6meQ9uaJJqUYxS8K2O6+/iPy+CxVUfcmE7eCF7T0YdrMDAHTC/c22C/i3S/psWN
+        o+zEr5TrsVDv8YI9RlmNj8//DIcXXexmqcp3TA5o4BdHcRE0b17JYMSN29FtwsGTTs0vhwiQ9kwHoSHC
+        /ZpSLCTF+aEqRXejy2VqSnW8Lb/G4UUXDJzRigw9+9zqENgi5V1TETcmn49EYHJ+ZRMB0jZ0q0hraOrB
+        uqHESyECE+fVOLCb5L9yeNEFT3vxXJYewIPYmNEiz0qP5PNG8POPFuDa/Y0nCPSiFSLdryklibQ9cojA
+        g4sZbO9Es2zh8KIL3rDRelq3QDcGMKVKSpMFtTcwtfmYFtYOhzbumAzA6IM15jZ08pHAa2oETAWPAKYd
+        K2Of/b4u5q6PB1QCj/vTNQLvcXjRxWaRNmiS0ghQS0yL1A0vs+qbffoSU2MlbhsPRAQbrv0zmwkUVA+x
+        GlJQdZ19VoQ27IWUkAXmMSPR3tTKc3jRBWvAbL2su9DQedWFqvofbtrcqJQqIwEO127MRpHu11RIbgDv
+        ft2FZjq5C5mkf3N40QXb54sFdjmoEZjsUwkUNdxkm5AlyH0yM7vYe21zSpWRQJNOzS/Bg0eL0HpHB0sV
+        nU7euEbq4ULI+1DPQsN1ahAnmuTfcXjRBW8QUvcq68AnKGqjqefPVDrZJmLKWbZoyoEC1h5rm1Oep1QZ
+        icCDhUV4hIHdPLoS+r3iaWHrON/PYw1eRd8c+9zq1xu77jw1jSbFeL/B4UUXLN2v002zV1UCpNVeibXP
+        dSPLrOxT0akf1sEYtR1TJWWbgVn0eVRymxY8eSN4ptiNFjXegkypg9WAnPxLDOx4s94PldhEBC9NcGhb
+        E/a4BGffjkI9kMcuqm6Uj92mEQQNMrSx8Vo0Le+8qxZFQ/NHkxt1uf5jeg142JsOzlga+KVkDm3rQs9t
+        PPvlwIZhCitOQiugubVxsbJ3FlvjXLTM6U1+HE0JPB2GP7M7dC07t5ddI5/XCGiDTYJJ+gWHtXWxmZW/
+        0M3XzuoN3fRlLyRZcYRMa2KbFtaNsNa4okcdJ6k9NoIyKgVsXumV0Ge/v5vFAL0vax2n4QVK7WII/CLW
+        AeGABMmx8iUO6fmEnpjhPNDvPSgHaHjXSPTXqDWBxkYNjKbpx89A2pGS0Oe0o2VQWH2Dvaf2mWaAygG9
+        dpBW9t0HJ87HwgF50yzQnetVT9+i/IFDen7BivhLXCR4LluPBdIGRWKLs6zEA5l6fKrWp0suh8DRb7Ky
+        L4aAsupdp1dvmp+dOJ25dssw0aKDn2rPYNccMXITh7J9wcE6AyszjLTrVqABvFnGE8KS7z5ZwdIfAaq+
+        jAMKZhYNYOrhYqy0aoUNfY+vFC9EzI6E0/fKbHDRwC9cSoesozQDyAHHW9L3OIztiz0u//PYnfY74+TA
+        9KDAHn1om10944Y0BEBA5IzzUNo8xtKsBjhcqwYeQm5BP9aP04x8qV2AuW795JfQ78uT1GxHmmiRjnAY
+        LyYJb2Z+HYNsiJ6cDTdtfnowj6mu2ecFJ5qcNk1+JwvcpypZT0OVmtxMcDWyCqsByzkuwq1G/SBIaQor
+        tuEMjN83lvcFq/K6+O+VAxzGi8kpi/c7aIlrmIWCF7A6GjfXAFw944GqVAGUwxJzDTplasy8GKCnT4jQ
+        nuWByVbDiXMln8/C/E+Aq/O7gteHZ2GgfwJce3NW8VoQ1xnFblQhDBzO9uTEW9lfxgXraKP8U2JEMM+j
+        1DJ35XpYwDKguG65ryU4OIDg92StOay+9dyjmZB71A9JGBP4/VRSjPgDDmd7Qo/7Es3KXgyyZbQIVDoF
+        GDME4VaUKmwPFinK8wQa1+nE1yF6T+rak7NC/zs0ufzQ48tl2pyRjVVZYSTQGj/kcLYvp8zit3ChVIdF
+        WqNNlcMiNHgEGCxzw/j5DMzpKtgFHEioJb5R64HOHA/rbZJjVeBJMXIf+vif0O/f1sBr6kdyrS4Bujy+
+        J0jgzD79UkiQpJh8X6VeHU+slp4ehAMJV6ysE+jTtkSr8nO+BKZq3/fx2uv0Tw2tlxwjrfgPiowAI+HN
+        fJKERX55JDSJ/5f8OYdJ+hmmv7/h4jFYQ/aR2k3SPxPM0m+cFulr/KfPlGSrVEDuWZeoEggn0ZKBxY+T
+        cLyd+SN+284RIorgplzYidYn6pbodOvutONJ0L80GBvj1DzWPoVEmzcHUuIYiXmjS+4YoZRJJ+yMUTZb
+        whDYLW60BBZYu1mZ3ZGWUElIMzjYQD1msKeSIHeyKiNOi/Oz/NadI5RtsLWfdcZITyVR58xWM51J+iO/
+        bWcJuQe60xyRaMAmMESCx0S3lMMJvODfUq9SMD3/GAvffcxO0GCwBBW7HW8BTewm5SfoToxEJTaILdjK
+        VJwUd3YMhEuCVfgptveTWnVnih3rjsxCTxM7Dlqu3dI/hH2ymBor/p26APWbXbv+CwxSOPQZMYrvAAAA
+        AElFTkSuQmCC
 </value>
   </data>
 </root>
